# MoneyMong_BE

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  crawler.yml
app/: __init__.py  config.py  database.py  logging_config.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth.py  conversations.py  crawler.py  documents.py  rag.py
app/core/: context_builder.py  conversation_graph.py  embedding.py  graph_nodes.py  graph_state.py  llm.py  memory.py  mretriever.py  prompts.py
app/models/: __init__.py  conversation.py  document.py  user.py
app/schemas/: __init__.py  conversation.py  document.py  rag.py
app/services/: auth_service.py  conversation_service.py  crawler_db.py  document_service.py  rag_service.py  s3_client.py
app/utils/: __init__.py
