# ============================================================================
# 프로젝트 기본 정보
# ============================================================================
[project]
name = "moneymong-be"
version = "0.1.0"
description = "MoneyMong Backend API"
requires-python = ">=3.11"

# ============================================================================
# Ruff 설정 - Python 린터 및 포맷터
# 공식 문서: https://docs.astral.sh/ruff/
# ============================================================================
[tool.ruff]
# Black 포맷터와 동일한 라인 길이 설정
line-length = 88
indent-width = 4

# 타겟 Python 버전 (3.11 이상)
target-version = "py311"

# 린트 및 포맷 검사에서 제외할 디렉토리
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    "*.egg-info",
]

# ============================================================================
# Ruff 린트 규칙 설정
# 협업 환경을 고려한 완화된 규칙 - 치명적인 오류만 검사
# ============================================================================
[tool.ruff.lint]
# 활성화할 린트 규칙 세트 확장 (E/W: 스타일, F: 논리 오류, I: import 정렬)
select = [
    "E",  # pycodestyle 에러
    "W",  # pycodestyle 경고
    "F",  # Pyflakes
    "I",  # isort
]

# 기존 ignore 규칙은 유지 (개발 편의성 존중)
ignore = [
    "E501",   # 라인 길이 제한 (포맷터가 처리)
    "F401",   # 미사용 import
    "F841",   # 미사용 변수
]

# 언더스코어로 시작하는 미사용 변수 허용
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# ============================================================================
# 파일별 예외 규칙
# ============================================================================
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]  # __init__.py에서 미사용 import 허용
"tests/**/*.py" = ["S101"]         # 테스트 파일에서 assert 사용 허용

# ============================================================================
# isort 설정 (import 정렬)
# ============================================================================
[tool.ruff.lint.isort]
known-first-party = ["moneymong"]  # 프로젝트 내부 패키지명
force-single-line = false          # 여러 import를 한 줄에 허용
lines-after-imports = 2            # import 후 빈 줄 2개

# ============================================================================
# Ruff 포맷터 설정
# ============================================================================
[tool.ruff.format]
# 문자열에 쌍따옴표 사용
quote-style = "double"

# 스페이스로 들여쓰기 (탭 아님)
indent-style = "space"

# 매직 트레일링 콤마 존중 (Black 방식)
skip-magic-trailing-comma = false

# 라인 엔딩 자동 감지 (LF/CRLF)
line-ending = "auto"

# docstring 내 코드 예제 포맷팅 활성화
docstring-code-format = true

# docstring 코드 라인 길이 (dynamic = 문서 들여쓰기 고려)
docstring-code-line-length = "dynamic"

# ============================================================================
# pytest 설정 (테스트 프레임워크)
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]                        # 테스트 파일 경로
python_files = ["test_*.py", "*_test.py"]    # 테스트 파일 패턴
python_classes = ["Test*"]                   # 테스트 클래스 패턴
python_functions = ["test_*"]                # 테스트 함수 패턴
addopts = [
    "--verbose",                             # 상세 출력
    "--cov=.",                               # 커버리지 측정 대상
    "--cov-report=term-missing",             # 터미널에 누락된 라인 표시
    "--cov-report=html",                     # HTML 커버리지 리포트 생성
]

# ============================================================================
# mypy 설정 (정적 타입 검사)
# 협업 환경 고려 - 선택적 타입 검사
# ============================================================================
[tool.mypy]
python_version = "3.11"                      # Python 버전
warn_return_any = false                      # Any 반환 타입 허용 (개발 중 유연성)
warn_unused_configs = false                  # 설정 경고 비활성화
disallow_untyped_defs = false                # 타입 없는 함수 허용
disallow_incomplete_defs = false             # 불완전한 타입 허용
check_untyped_defs = false                   # 타입 없는 함수 검사 안함
no_implicit_optional = false                 # 암시적 Optional 허용
warn_redundant_casts = false                 # 중복 캐스트 허용
warn_unused_ignores = false                  # type: ignore 자유롭게 사용
warn_no_return = false                       # 반환값 누락 허용
strict_equality = false                      # 유연한 동등성 검사

# 모든 외부 패키지 import 에러 무시
[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "langsmith.*",
    "tiktoken.*",
    "pgvector.*",
    "*",                                     # 모든 외부 패키지
]
ignore_missing_imports = true

# ============================================================================
# coverage 설정 (코드 커버리지)
# ============================================================================
[tool.coverage.run]
source = ["."]                               # 커버리지 측정 소스
omit = [
    "tests/*",                               # 테스트 파일 제외
    "venv/*",                                # 가상환경 제외
    ".venv/*",
    "*/site-packages/*",                     # 외부 패키지 제외
]

[tool.coverage.report]
# 커버리지 리포트에서 제외할 코드 패턴
exclude_lines = [
    "pragma: no cover",                      # 명시적 제외
    "def __repr__",                          # __repr__ 메서드
    "raise AssertionError",                  # 어설션 에러
    "raise NotImplementedError",             # 미구현 에러
    "if __name__ == .__main__.:",            # 메인 가드
    "if TYPE_CHECKING:",                     # 타입 체킹 블록
    "@abstractmethod",                       # 추상 메서드
]
